[package]
edition = "2021"
name = "vscode-deno-lint"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_ast = "0.29.0"
deno_lint = "0.51.0"
# wasm-bindgen = "0.2.87"
wasm-bindgen = {git = "https://github.com/rustwasm/wasm-bindgen.git"}
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.4"
